# gpaint

./: .clang-format  FFMPEG_SUPP_CODECS  Makefile  README.md  TODO  a.out  gmon.out  gpaint  imgdiff.py  meson.build  meson_options.txt  newnewoldmain.c  newoldmain.c  org.gnu.paint.gschema.xml  org.gnu.paint.json  pngtobytes.c  test.tiff
.github/workflows/: main.yml
data/: meson.build  org.gnu.paint.metainfo.xml.in
data/icons/: meson.build
docker/paint/: Makefile  a.out  meson.build  paint
docker/paint/data/: org.gnu.paint.desktop.in  org.gnu.paint.gschema.xml  org.gnu.paint.service.in
docker/paint/docker/: Dockerfile
docker/paint/po/: meson.build
docker/paint/src/: backup.c  color-swap-button.c  color-swap-button.h  drag-square.c  drag-square.h  dragging.c  gpaint-application.h  gpaint-cairo.h  gpaint.h  layers.c  main.c  meson.build  number-entry.c  zoom-entry.c  zoom.c
docker/paint/src/formats/: jpeg.c  png.c
docker/paint/src/tools/: bezier.c  brush.c  bucket.c  drag.c  ellipse.c  eraser.c  freehand.c  line.c  picker.c  rectangle.c  select-rectangle.c  tools-icons.c  tools-icons.h  tools-internal.c  tools.h
po/: POTFILES.in
src/: backup.c  backup.h  border-widget.c  border-widget.h  color-swap-button.c  color.c  color.h  cursor.c  drag-square.c  drag-square.h  formats.c  formats.h  gif.c  gpaint-cairo.h  gpaint-window.c  gpaint.h  layers.c  layers.h  main.c  meson.build  number-entry.c  oldlayers.c  select.c  utils.h  value-selector.c  zoom.c
src/formats/: formats.h  gif.c  jpeg.c  tiff.c
src/tools/: bezier.c  brush.c  bucket.c  drag.c  ellipse.c  eraser.c  freehand.c  line.c  picker.c  rectangle.c  select-rectangle.c  symmetric.c  tools-icons.c  tools-icons.h  tools-internal.c  tools-internal.h  tools.h  triangle.c
src/trash/: bordered-widget.c  bordered-widget.h  gpaint-application.c  gpaint-window.h  width-selector.c  zoom-entry.c
src/trash/formats/: avif.c  errors.c  formats.c  png-new.c  png.c
src/widgets/: border-widget.c  border-widget.h  color-swap-button.c  color-swap-button.h  drag-square.c  number-entry.c  number-entry.h  value-selector.c  value-selector.h
trash/: main.c  oldmain.c  pngtoraw.c
