gpaint_sources = [
  'main.c',
  'widgets/color-swap-button.c',
  'widgets/border-widget.c',
  'widgets/drag-square.c',
  'backup.c',
  'tools/select-rectangle.c',
  'tools/freehand.c',
  'tools/bucket.c',
  'tools/eraser.c',
  'tools/picker.c',
  'tools/rectangle.c',
  'tools/triangle.c',
  'tools/ellipse.c',
  'tools/brush.c',
  'tools/line.c',
  'tools/drag.c',
  'tools/symmetric.c',
  'tools/tools-internal.c',
  'formats.c',
  'widgets/value-selector.c',
  'widgets/number-entry.c',
]

executable('gpaint', gpaint_sources,
  dependencies: gpaint_deps,
       install: true,
)
