gpaint_sources = [
  'main.c',
  'backup.c',
  'formats.c',
  'tools/brush.c',
  'tools/bucket.c',
  'tools/drag.c',
  'tools/ellipse.c',
  'tools/eraser.c',
  'tools/freehand.c',
  'tools/line.c',
  'tools/picker.c',
  'tools/rectangle.c',
  'tools/select-rectangle.c',
  'tools/symmetric.c',
  'tools/tools-internal.c',
  'tools/triangle.c',
  'widgets/border-widget.c',
  'widgets/color-swap-button.c',
  'widgets/drag-square.c',
  'widgets/number-entry.c',
  'widgets/value-selector.c',
]

executable('gpaint', gpaint_sources,
  dependencies: gpaint_deps,
       install: true,
)
